== SVN

== 1.5.1

* bugfix: fixed bug in su_put that was causing Windows [mbailey]

== 1.5.0

* bugfix: :set_perms_for_mongrel_dirs [mbailey]
  - now don't fail if log files do not exist (e.g initial deployment)
  - is called by :after_symlink task instead of :after_update 
    this is because some tasks call :update_code without calling the 
    :update task but in all of these cases :symlink is called 

* updated version from 1.4.x to 1.5.x due to pretty big change made
  in previous version (mongrel no longer running as root) [mbailey]

== 1.4.2

* change: mongrel no longer runs as root for security reasons [mbailey]
* bugfix: install apache version 2.2.4 as previous version is no longer on their webserver [mbailey]
* bugfix: fixed install_rubygems so install_rails_stack no longer fails when first run [mbailey]

== 1.4.0

* renamed svn commands and made svn_create_repos re-runable [mbailey]
* bugfix: Wildcard Apache NameVirtualHosts directive used be used just once [mbailey]

== 1.3.1

* bugfix

== 1.3.0

* added md5sum checking to deprec.download_src [mbailey]
* new function: deprec.mkdir(path, mode=0755, group=nil, user=nil) [mbailey]
* start apache and mongrel on server boot [mbailey]
* removed deprec_dotfiles script as the Cap code it patches is now in Capistrano source. [mbailey]
* changed from LGPG to GPL licence. [mbailey]

== 1.2.2

* Added enable_multiverse(), disable_multiverse() tasks for ubuntu package management [mbailey]
* Removed termios as a gem requirement as it doesn't work on Windows [mbailey]

== 1.2.1

* Updated railsmachine code to include SSL fix from new release [mbailey]

== 1.2.0

* Added run_with_input and sudo_with_input for interactive tasks. [topfunky]
* Added sudo_stream for piping the output of a privileged command like the built-in stream() [topfunky]
* svn_cache_credentials task does an interactive svn list to make http-based repository deployments easier. [topfunky]